insercao de link de repositorio na view index

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -4,7 +4,7 @@
     <p>
         Para uma melhor utilização de todos os recursos, <br />
         consulte a documentação contida no repositório:<br />
-        <a href=""></a>
+        <a href="https://github.com/everson-da-luz/ever-framework" target="blank">https://github.com/everson-da-luz/ever-framework</a>
     </p>
     <p>
         <small>
