Correção no caminho do logo

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,5 +1,5 @@
 <div class="container-center">
-    <img src="images/ever-framework-logo.png" alt="Ever Framework">
+    <img src="<?= $this->getBaseUrl() ?>/images/ever-framework-logo.png" alt="Ever Framework">
     <h1>Bem-vindo ao <strong>Ever Framework</strong></h1>
     <p>
         Para uma melhor utilização de todos os recursos, <br />
